[Fix] Width on mobile

--- a/src/_includes/styles/components/navbar.css
+++ b/src/_includes/styles/components/navbar.css
@@ -94,10 +94,11 @@
 }
 
 #sidebar-menu {
-   display:none;
+   display: none;
+
    & .menu {
       position: absolute;
-      right: -100px;
+      right: 0px;
       top: -100px;
       z-index: 100;
       width: 200px;
@@ -115,7 +116,7 @@
    & .hamburger {
       position: absolute;
       top: 135px;
-      left: 50px;
+      right: 35px;
       width: 30px;
       height: 2px;
       background: var(--color-foreground);
@@ -184,16 +185,26 @@
    & ul {
       z-index: 200;
       position: fixed;
-      top: 50%;
+      /* top: 50%;
       left: 50%;
       -webkit-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); */
       opacity: 0;
       -webkit-transition: .25s 0s ease-in-out;
       transition: .25s 0s ease-in-out;
+      top: 0;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
    }
 
    & li {
+      text-align: center;
       list-style-type: none;
       line-height: 3rem;
       font-size: 20px;
@@ -232,12 +243,14 @@
 
 @media (max-width: 1280px) {
    .navbar-menu {
-      display:none
+      display: none
    }
+
    #sidebar-menu {
-      display:block
+      display: block
    }
 }
+
 @media (max-width: 768px) {
    .navbar-search {
       min-width: auto;
